# strava-mcp-server

./: .gitignore  TRAINING_PLAN_FORMAT.md  analyze_training_plan.py  generate_training_calendar.py  generate_training_report.py  get_recent_runs.py  pyproject.toml  training_plan_template.json  update_run_data.py
.claude/: settings.local.json
coaching_data/: coaching_persona.md  coaching_persona_roland.md  session_notes_default.json
misc/: get_strava_token.py
src/strava_mcp_server/: README.md  __init__.py  server.py  strava_client.py
src/strava_mcp_server/cli/: __init__.py  analyze_plan.py  generate_calendar.py  generate_report.py  update_data.py
src/strava_mcp_server/models/: __init__.py  coaching.py  training_plan.py
src/strava_mcp_server/storage/: __init__.py  base.py  coaching.py  runs.py  training_plans.py
src/strava_mcp_server/tools/: __init__.py  activities.py  coaching.py  reports.py  training_plans.py
src/strava_mcp_server/utils/: __init__.py  dates.py  formatting.py
